Removed old policy related and deprecated code.
Change-Id: I678fdfda188dbda14078f4ccea5070f421401d05