@@ -81,16 +81,8 @@
 				<configuration>
 					<reuseForks>false</reuseForks>
 					<forkCount>2</forkCount>
-					<threadCount>10</threadCount>
-
-					<excludes>
-						<exclude>**/*APITest.java</exclude>
-						<exclude>de/ids_mannheim/korap/suites/*.java</exclude>
-						<exclude>**/KustvaktServerTest.java</exclude>
-						<exclude>**/ResourceServiceTest.java</exclude>
-						<exclude>**/ResourceInfoServiceTest.java</exclude>
-						<exclude>**/PolicyServiceTest.java</exclude>
-					</excludes>
+					<threadCount>4</threadCount>
+					<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
 					<includes>
 						<include>de/ids_mannheim/korap/**/*.java</include>
 					</includes>
@@ -155,7 +147,7 @@
 		<dependency>
 			<groupId>de.ids_mannheim.korap</groupId>
 			<artifactId>Kustvakt-core</artifactId>
-			<version>0.59.10</version>
+			<version>0.60</version>
 		</dependency>
 		
 		<!-- Spring -->
